--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -6,9 +6,9 @@
 //   margin: 16px auto;
 // }
 
-button {
-  margin-top: 16px !important;
-}
+// button {
+//   margin-top: 16px !important;
+// }
 
 .done-btn {
   height: 70px;
