--- a/khitma/src/app/shared/group-list/group-list.component.html
+++ b/khitma/src/app/shared/group-list/group-list.component.html
@@ -20,7 +20,7 @@
         </div>
 
         <div *ngIf="showSettings" fxFlex="10%" class="center-center">
-            <mat-icon (click)="removeGroup(group)">remove_circle</mat-icon>
+            <mat-icon (click)="action(group)">archive</mat-icon>
         </div>
 
 
