--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -6,6 +6,7 @@
     </app-celebration>
 
 
+
     <section>
         <app-khitma-info [group]="group"></app-khitma-info>
     </section>
@@ -53,5 +54,7 @@
 
 
 
+    <span class="center-center" style="opacity: 0.25; padding: 20px;">Admin: {{isAdmin}}</span>
+    <div class="spacer"></div>
 
 </div>
