--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -97,3 +97,11 @@
   padding: 32px 0;
   margin: 0;
 }
+
+.admin-section {
+  margin: 0;
+  background: lightgray;
+  padding: 10px;
+  margin: -32px;
+  margin-bottom: 48px;
+}
