minor style fix

--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -58,9 +58,9 @@
     </section>
 
     <div class="spacer"></div>
-
+    <!-- 
 
     <span class="center-center" style="opacity: 0.25; padding: 20px;">Admin: {{isAdmin}}</span>
-    <div class="spacer"></div>
+    <div class="spacer"></div> -->
 
 </div>
