--- a/khitma/src/app/shared/juz/juz.component.scss
+++ b/khitma/src/app/shared/juz/juz.component.scss
@@ -2,7 +2,7 @@
   display: block;
 
   &:not(:first-child) {
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -65,10 +65,11 @@
 
 .juz.list-item.idle {
   // background-color: white;
-  padding: 8px;
+  // padding: 8px;
   margin: 10px auto;
 
   // border: 1px solid rgba(0, 0, 0, 0.12);
+  border: none !important;
 }
 
 .mat-elevation-z2 {
@@ -90,6 +91,7 @@
 }
 
 .juz.list-item {
-  padding: 16px 8px;
-  margin: 10px auto;
+  padding: 24px 8px;
+  // border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 0;
 }
