--- a/khitma/src/app/shared/juz-toggle/juz-toggle.component.scss
+++ b/khitma/src/app/shared/juz-toggle/juz-toggle.component.scss
@@ -1,10 +1,13 @@
 .juz-toggle {
   display: block;
-  width: 24px;
-  height: 24px;
+  width: 48px;
+  height: 48px;
   border-radius: 100%;
-  font-size: larger;
+  font-size: xx-large;
   color: rgba(0, 0, 0, 0.8);
+
+  margin: 0 auto;
+  line-height: 48px;
 }
 
 .juz-toggle.idle {
