--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -6,56 +6,104 @@
     </app-celebration>
 
 
-    <section *ngIf="isAdmin" class="admin-section center-center">
-        <mat-icon style="margin-left: 8px;">verified</mat-icon>
 
-        <span> لديك صلاحيّات مسؤول في هذه المجموعة </span>
+
+
+
+
+    <section class="khitma-info">
+
+
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    {{group.title}}
+                </mat-panel-title>
+
+            </mat-expansion-panel-header>
+
+            <mat-panel-description>
+                {{group.description}}
+
+            </mat-panel-description>
+
+            <footer>
+                منشئ الختمة: {{group.author}}
+            </footer>
+
+
+        </mat-expansion-panel>
+
+
+
     </section>
 
-    <section>
-        <app-khitma-info [group]="group"></app-khitma-info>
+
+    <section class="center-center view-mode">
+
+        <mat-button-toggle-group #viewMode="matButtonToggleGroup" value="progress">
+            <mat-button-toggle value="progress" [ngClass]="{'active': viewMode.value == 'progress'}">
+                <label>تقدّم الختمة</label>
+            </mat-button-toggle>
+            <mat-button-toggle value="namesList" [ngClass]="{'active': viewMode.value == 'namesList'}">
+                <label>قائمة الأسماء</label>
+            </mat-button-toggle>
+        </mat-button-toggle-group>
     </section>
 
 
 
-    <section class="juz-grid-section">
+
+    <section class="juz-grid-section" *ngIf="viewMode.value == 'progress'">
 
         <app-juz-grid class="app-juz-grid1" [ajza]="group.ajza" [myJuzIndex]="myJuzIndex"
             (onJuzSelection)="juzSelected($event)">
         </app-juz-grid>
     </section>
 
-
-    <section class="action-panel mat-elevation-z16">
-
-        <div *ngIf="myJuzIndex != null">
-            <div class="current-juz"><span>{{myJuzIndex + 1}}</span> </div>
-
-
-            <!-- جزؤك الحالي:  -->
-            <button mat-raised-button color="accent" class="done-btn app-btn-primary" (click)="juzDone()"
-                [disabled]="myJuzIndex == null">
-                أتممت قراءة جزئي</button>
-
-
-            <button class="giveup-btn" mat-flat-button (click)="juzGiveup()">تنازل عن الجزء</button>
-
-        </div>
-
-
-        <div *ngIf="myJuzIndex == null">رجاء قم باختيار جزء</div>
-    </section>
-
-
-
-
-    <section>
-        <header>أجزاء الختمة</header>
+    <section *ngIf="viewMode.value == 'namesList'">
+        <!-- <header>أجزاء الختمة</header> -->
 
         <app-juz-list [ajza]="group.ajza" [myJuzIndex]="myJuzIndex" (onJuzSelection)="juzSelected($event)">
         </app-juz-list>
 
     </section>
+
+    <section class="action-panel mat-elevation-z16">
+
+        <section *ngIf="isAdmin" class="admin-section center-center">
+            <mat-icon style="margin-left: 8px;">verified</mat-icon>
+
+            <span> لديك صلاحيّات مسؤول في هذه المجموعة </span>
+        </section>
+
+
+        <div>
+
+            <div class="my-juz-actions" *ngIf="myJuzIndex != null">
+                <div class="current-juz"><span>{{myJuzIndex + 1}}</span> </div>
+
+
+                <!-- جزؤك الحالي:  -->
+                <button mat-raised-button color="accent" class="done-btn app-btn-primary" (click)="juzDone()"
+                    [disabled]="myJuzIndex == null">
+                    أتممت قراءة جزئي</button>
+
+
+                <button class="giveup-btn" mat-flat-button (click)="juzGiveup()">تنازل عن الجزء</button>
+
+            </div>
+
+
+            <div *ngIf="myJuzIndex == null" style="padding:16px" class="center-center">رجاء قم باختيار جزء</div>
+
+        </div>
+    </section>
+
+
+
+
+
 
     <div class="spacer"></div>
     <!-- 
