--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -1,21 +1,27 @@
-<mat-toolbar color="primary">
-  <span><a href="/">ختمة.نت</a></span>
+<div fxLayout="row wrap" fxLayoutGap="16px grid" class="center-center">
+  <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%">
 
-  <span class="spacer"></span>
+    <mat-toolbar color="primary">
+      <span><a href="/">ختمة.نت</a></span>
 
-  <button *ngIf="!isPwaInstalled" mat-raised-button class="pwa-btn">
-    <mat-icon>system_update</mat-icon>
-  </button>
+      <span class="spacer"></span>
 
-
-  <a mat-raised-button color="accent" class="app-btn-primary" href="/">مجموعاتي</a>
-
-
-
-</mat-toolbar>
+      <button *ngIf="!isPwaInstalled" mat-raised-button class="pwa-btn">
+        <mat-icon>system_update</mat-icon>
+      </button>
 
 
+      <a mat-raised-button color="accent" class="app-btn-primary" href="/">مجموعاتي</a>
 
-<div class="content">
-  <router-outlet></router-outlet>
+
+    </mat-toolbar>
+
+
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+
+
+
+  </div>
 </div>
