--- a/khitma/src/app/pages/create-group/group-invite/group-invite.component.html
+++ b/khitma/src/app/pages/create-group/group-invite/group-invite.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="group" class="group-invite">
 
-    <app-khitma-info [group]="group" [showLink]="flase"></app-khitma-info>
+    <app-khitma-info [group]="group" [showLink]="flase" [isExpanded]="false"></app-khitma-info>
 
 
     <p class="invite-link">{{inviteLink}}</p>
