--- a/khitma/src/app/pages/group/group-join/group-join.component.html
+++ b/khitma/src/app/pages/group/group-join/group-join.component.html
@@ -1,4 +1,4 @@
-<app-khitma-info [group]="group"></app-khitma-info>
+<app-khitma-info [group]="group" [isExpanded]="true"></app-khitma-info>
 
 <mat-card>
     <mat-card-content>
