Multi khitma per group + khitma done experience + V2 kihtma schema
بسم الله والحمد لله

--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -63,9 +63,9 @@ mat-toolbar {
 }
 
 .app-btn-primary.large {
-  height: 60px;
-  line-height: 60px;
-  font-size: large;
+  height: 80px;
+  line-height: 80px;
+  font-size: x-large;
 }
 
 .app-btn-primary[disabled="true"] {
