--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -2,6 +2,7 @@
 
     <label style="display:block;text-align: center;">﷽</label>
 
+    <img class="logo" src="assets/khitma-logo.png" />
     <p>
 
         يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
