--- a/khitma/src/app/pages/home/home.component.scss
+++ b/khitma/src/app/pages/home/home.component.scss
@@ -3,10 +3,10 @@
   line-height: normal;
   text-align: justify;
 
-  .create-btn {
-    font-size: x-large;
-    height: 60px;
-    line-height: 60px;
+  .logo {
+    display: block;
+    width: 50%;
+    margin: 64px auto 32px auto !important;
   }
 }
 
