--- a/khitma/src/styles.scss
+++ b/khitma/src/styles.scss
@@ -10,10 +10,9 @@ body {
   margin: 0;
   // font-family: "Scheherazade", serif !important;
   // font-size: 100% !important;
-  line-height: 150% !important;
   overflow-x: hidden;
   background-color: #fffef6;
-  // font-size: larger;
+  font-size: larger;
 }
 
 $custom-typography: mat-typography-config(
