--- a/khitma/src/app/shared/khitma-info/khitma-info.component.html
+++ b/khitma/src/app/shared/khitma-info/khitma-info.component.html
@@ -9,7 +9,7 @@
 
 
             <span class="khitma-cycle" *ngIf="group.cycle > 0">
-                (ختمة {{group.cycle}})
+                (ختمة {{group.cycle + 1}})
 
             </span>
 
