--- a/khitma/src/app/shared/khitma-done-celebration/khitma-done-celebration.component.html
+++ b/khitma/src/app/shared/khitma-done-celebration/khitma-done-celebration.component.html
@@ -4,7 +4,7 @@
 
         <div class="gift-text" *ngIf="isOpen" [ngClass]="{'shown': isOpen}">
             <h1> تمّت الختمة</h1>
-            <h1>بارك الله بكم!</h1>
+            <h1>بارك الله بك!</h1>
 
             <!-- <p>إن شاء الله يكتب لكل منكم  أجر </p> -->
             <!-- [todo]: add thawab link here? -->
