--- a/khitma/src/styles.scss
+++ b/khitma/src/styles.scss
@@ -12,7 +12,7 @@ body {
   // font-size: 100% !important;
   overflow-x: hidden;
   background-color: #fffef6;
-  font-size: larger;
+  font-size: large;
 }
 
 $custom-typography: mat-typography-config(
