--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -12,7 +12,26 @@
 
     </section>
 
-    <section class="center-center view-mode">
+
+    <app-celebration *ngIf="showCelebration" class="celebration-container"
+        style="position: fixed; top: 0; left: 0; right: 0; z-index: 10000; bottom: 0;">
+    </app-celebration>
+
+
+    <header class="dashboard-header">
+        <section *ngIf="isAdmin" class="admin-section center-center">
+            <mat-icon style="margin-left: 8px;">verified</mat-icon>
+
+            <span> لديك صلاحيّات مسؤول في هذه المجموعة </span>
+        </section>
+
+        <app-khitma-info [group]="group" [isExpanded]="false"></app-khitma-info>
+
+    </header>
+
+
+
+    <!-- <section class="center-center view-mode">
 
         <mat-button-toggle-group #viewMode="matButtonToggleGroup" value="progress">
             <mat-button-toggle value="progress">
@@ -26,29 +45,45 @@
                 </label>
             </mat-button-toggle>
         </mat-button-toggle-group>
-    </section>
-
-    <app-celebration *ngIf="showCelebration" class="celebration-container"
-        style="position: fixed; top: 0; left: 0; right: 0; z-index: 10000; bottom: 0;">
-    </app-celebration>
+    </section> -->
 
 
-    <app-khitma-info [group]="group" [isExpanded]="false"></app-khitma-info>
 
 
-    <section class="juz-grid-section" *ngIf="viewMode.value == 'progress'">
+    <div class="space"></div>
+
+
+    <section class="juz-grid-section">
         <app-juz-grid class="app-juz-grid1" [ajza]="group.ajza" [myJuzIndex]="myJuzIndex"
             (onJuzSelection)="juzSelected($event)">
         </app-juz-grid>
     </section>
 
-    <section class="juz-list-section" *ngIf="viewMode.value == 'namesList'">
+    <div class="space"></div>
 
-        <button *ngIf="isAdmin" target="_blank" mat-raised-button class="block app-btn-primary"
-            [cdkCopyToClipboard]="getKhitmaStatusMsg()" class="copy-group-status-msg-btn block">
-            نسخ وضع الختمة كرسالة
-        </button>
 
+
+    <button *ngIf="isAdmin" target="_blank" mat-raised-button class="block app-btn-primary"
+        [cdkCopyToClipboard]="getKhitmaStatusMsg()" (cdkCopyToClipboardCopied)="groupStatusCopied()"
+        class="copy-group-status-msg-btn block">
+        نسخ وضع الختمة الحالي مع الأسماء
+    </button>
+
+    <div class="space"></div>
+
+
+
+    <div class="center-center names-toggle-container">
+        <mat-slide-toggle [color]="color" [(ngModel)]="showNames">
+            إظاهر قائمة الأسماء
+        </mat-slide-toggle>
+    </div>
+
+    <div class="space"></div>
+
+
+
+    <section class="juz-list-section" *ngIf="showNames">
 
         <app-juz-list [ajza]="group.ajza" [myJuzIndex]="myJuzIndex" (onJuzSelection)="juzSelected($event)">
         </app-juz-list>
@@ -58,21 +93,17 @@
 
     <section class="action-panel mat-elevation-z16">
 
-        <section *ngIf="isAdmin" class="admin-section center-center">
-            <mat-icon style="margin-left: 8px;">verified</mat-icon>
 
-            <span> لديك صلاحيّات مسؤول في هذه المجموعة </span>
-        </section>
 
 
         <div>
 
-            <section class="my-juz-actions" *ngIf="myJuzIndex != null" fxLayout="row wrap" fxLayoutGap="12px grid">
+            <section class="my-juz-actions" *ngIf="myJuzIndex != null" fxLayout="row wrap" fxLayoutGap="0px grid">
 
                 <div fxFlex="25%" class="center-center">
                     <a target="_blank" [href]="getMyJuzReadUrl()">
                         <mat-icon class="quran-explorer-btn" [matBadge]="myJuzIndex + 1" matBadgeSize="large"
-                            matBadgePosition="below before">
+                            matBadgePosition="below ">
                             auto_stories</mat-icon>
                     </a>
                 </div>
