--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -227,6 +227,9 @@
   // margin: 32px auto 32px auto;
   background-color: #614316;
   color: white;
+  margin-bottom: 16px;
+  font-size: large !important;
+  font-weight: bold;
 }
 
 .khitma-info {
