--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -63,8 +63,8 @@
 
 
     <section *ngIf="isAdmin">
-        <button mat-raised-button class="block copy-group-status-msg-btn large"
-            [cdkCopyToClipboard]="getKhitmaStatusMsg()" (cdkCopyToClipboardCopied)="groupStatusCopied()">
+        <button mat-raised-button class="block copy-group-status-msg-btn large" [cdkCopyToClipboard]="statusMsg"
+            (cdkCopyToClipboardCopied)="groupStatusCopied()">
             نسخ وضع الختمة الحالي مع الأسماء
         </button>
 
@@ -74,23 +74,6 @@
             نسخ رابط المجموعة ودعوة الانضمام
         </button>
     </section>
-
-
-    <!--         
-    <section fxLayout="row wrap" fxLayoutGap="16px grid">
-
-        <div fxFlex="75%" class="center-center">
-        
-
-        </div>
-
-        <div fxFlex="25%" class="center-center">
-     
-
-        </div>
-
-    </section> -->
-
 
 
     <div class="space"></div>
